--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "mongoose": "^8.3.2",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
+    "node-rsa": "^1.1.1",
     "otp-generator": "^4.0.1",
+    "qrcode": "^1.5.3",
     "url": "^0.11.3",
     "winston": "^3.13.0"
   },
