--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "dev": "bun --hot src/index.ts",
+    "dev": "env-cmd -f .env.local bun --hot src/index.ts",
     "start": "bun dist/index.js",
     "clean": "rimraf -rf dist",
     "build": "bun run clean && tsc",
@@ -44,6 +44,9 @@
     "cloudinary": "^2.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
+    "env-cmd": "^10.1.0",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
@@ -54,6 +57,7 @@
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "node-rsa": "^1.1.1",
+    "nodemailer": "^6.9.14",
     "otp-generator": "^4.0.1",
     "qrcode": "^1.5.3",
     "url": "^0.11.3",
