--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,8 +31,8 @@
     "forceConsistentCasingInFileNames": true,
 
     // Some stricter flags
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
 
     "sourceMap": true,
