--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@getbrevo/brevo": "^1.0.1",
+    "@google-cloud/storage": "^7.11.2",
     "@sendgrid/mail": "^8.1.3",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
@@ -48,6 +49,9 @@
     "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^12.2.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.1",
