--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
-
+    "resolveJsonModule": true,
     // Bundler mode
     "moduleResolution": "Node",
     "allowArbitraryExtensions": true,
