--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,16 @@
 # Include any files or directories that you don't want to be copied to your
+
 # container here (e.g., local build artifacts, temporary files, etc.).
+
 #
+
 # For more help, visit the .dockerignore file reference guide at
+
 # https://docs.docker.com/go/build-context-dockerignore/
 
 **/.classpath
 **/.dockerignore
-**/.env
+
 **/.git
 **/.gitignore
 **/.project
@@ -17,23 +21,19 @@
 **/.next
 **/.cache
 **/*.*proj.user
-**/*.dbmdl
-**/*.jfm
+**/\*.dbmdl
+**/_.jfm
 **/charts
-**/docker-compose*
-**/compose*
-**/Dockerfile*
+**/docker-compose_
+**/compose\*
+**/Dockerfile\*
 **/node_modules
 **/npm-debug.log
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
 **/build
-**/dist
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+\*\*/dist
+
 LICENSE
 README.md
