--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@getbrevo/brevo": "^1.0.1",
     "@google-cloud/storage": "^7.11.2",
     "@sendgrid/mail": "^8.1.3",
+    "aws-sdk": "^2.1659.0",
     "axios": "^1.6.8",
     "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
